deployment/beckn-location-tracking-service-master-60f74c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beckn-location-tracking-service-master-60f74c
  namespace: atlas
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: beckn-location-tracking-service-master
      version: 60f74c
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2023-09-07T16:36:44+05:30"
      creationTimestamp: null
      labels:
        app: beckn-location-tracking-service-master
        version: 60f74c
    spec:
      containers:
      - args:
        - |
          mkdir -p /etc/beckn/geojson && cp -HR /tmp/geojson/* /etc/beckn/geojson/. && mkdir -p /etc/beckn/config && (echo $DHALL_CONFIG_ENCODED | base64 -d > $DHALL_CONFIG) && echo "starting app server" && /bin/location_tracking_service
        command:
        - /bin/bash
        - -c
        image: ghcr.io/nammayatri/location-tracking-service:60f74c
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthcheck
            port: 8016
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 12
        name: beckn-location-tracking-service-master
        ports:
        - containerPort: 8016
          name: http-app
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /healthcheck
            port: 8016
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 12
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          requests:
            cpu: "1"
            memory: 1Gi
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp/geojson
          name: geojson
          readOnly: true
      dnsConfig:
        options:
        - name: ndots
          value: "1"
        - name: single-request-reopen
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1337
      terminationGracePeriodSeconds: 90
      volumes:
      - name: fcm-key
        secret:
          defaultMode: 420
          secretName: beckn-ny-fcm-key
      - configMap:
          defaultMode: 420
          name: istio-ca-root-cert
        name: istiod-ca-cert
      - configMap:
          defaultMode: 420
          items:
          - key: karnataka.json
            path: karnataka.json
          - key: kerala.json
            path: kerala.json
          - key: kolkata.json
            path: kolkata.json
          name: location-tracking-service-geojson
        name: geojson
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: beckn-location-tracking-service-master
  name: beckn-location-tracking-service-master
  namespace: atlas
spec:
  ports:
  - name: http-app
    port: 8016
    protocol: TCP
    targetPort: 8016
  - name: http-prom
    port: 9999
    protocol: TCP
    targetPort: 8016
  selector:
    app: beckn-location-tracking-service-master
status:
  loadBalancer: {}
